--- a/code/API_definitions/device-status.yaml
+++ b/code/API_definitions/device-status.yaml
@@ -45,7 +45,7 @@ info:
       - `CONNECTED_DATA`, if device is connected to the network via data usage
       - `NOT_CONNECTED`, if device is not connected to the network
 
-    * **lastChecked** : Indicate when the information provided was last confirmed to be correct.
+    * **LastStatusTime** : This property specifies the time when the status was last checked. Its inclusion in the response indicates that the information may not be current, while its absence suggests that the status information is fresh.
     # API Functionality
 
     The API exposes following capabilities:
@@ -152,15 +152,15 @@ paths:
               examples:
                 Connected-With-SMS:
                   value:
-                    lastChecked: "2024-02-20T10:41:38.657Z"
+                    lastStatusTime: "2024-02-20T10:41:38.657Z"
                     connectivityStatus: CONNECTED_SMS
                 Connected-With-DATA:
                   value:
-                    lastChecked: "2024-02-20T10:41:38.657Z"
+                    lastStatusTime: "2024-02-20T10:41:38.657Z"
                     connectivityStatus: CONNECTED_DATA
                 Not-Connected:
                   value:
-                    lastChecked: "2024-02-20T10:41:38.657Z"
+                    lastStatusTime: "2024-02-20T10:41:38.657Z"
                     connectivityStatus: NOT_CONNECTED
         "400":
           $ref: "#/components/responses/Generic400"
@@ -205,19 +205,19 @@ paths:
               examples:
                 No-Country-Name:
                   value:
-                    lastChecked: "2024-02-20T10:41:38.657Z"
+                    lastStatusTime: "2024-02-20T10:41:38.657Z"
                     roaming: true
                     countryCode: 901
                     countryName: []
                 Single-Country-Code:
                   value:
-                    lastChecked: "2024-02-20T10:41:38.657Z"
+                    lastStatusTime: "2024-02-20T10:41:38.657Z"
                     roaming: true
                     countryCode: 262
                     countryName: ["DE"]
                 Multiple-Country-Codes:
                   value:
-                    lastChecked: "2024-02-20T10:41:38.657Z"
+                    lastStatusTime: "2024-02-20T10:41:38.657Z"
                     roaming: true
                     countryCode: 340
                     countryName: ["BL", "GF", "GP", "MF", "MQ"]
@@ -473,11 +473,10 @@ components:
     RoamingStatusResponse:
       type: object
       required:
-        - lastChecked
         - roaming
       properties:
-        lastChecked:
-          $ref: "#/components/schemas/LastChecked"
+        lastStatusTime:
+          $ref: "#/components/schemas/LastStatusTime"
         roaming:
           $ref: "#/components/schemas/ActiveRoaming"
         countryCode:
@@ -485,7 +484,7 @@ components:
         countryName:
           $ref: "#/components/schemas/CountryName"
 
-    LastChecked:
+    LastStatusTime:
       description: Last time that the associated device roaming status/connectivity was checked and, if necessary, updated
       type: string
       format: date-time
@@ -498,11 +497,10 @@ components:
     ConnectivityStatusResponse:
       type: object
       required:
-        - lastChecked
         - connectivityStatus
       properties:
-        lastChecked:
-          $ref: "#/components/schemas/LastChecked"
+        lastStatusTime:
+          $ref: "#/components/schemas/LastStatusTime"
         connectivityStatus:
           $ref: "#/components/schemas/ConnectivityStatus"
 
