--- a/code/API_definitions/device-reachability-status.yaml
+++ b/code/API_definitions/device-reachability-status.yaml
@@ -1,8 +1,9 @@
 openapi: 3.0.3
 info:
-  title: Device Reachability Status
+  title: Device Reachability Status Retrieval
   description: |
-    This API provides the customer with the ability to query device reachability status (Data or SMS)
+    This API provides the customer with the ability to query device:
+      - Reachability status
 
     # Introduction
 
@@ -28,7 +29,7 @@ info:
 
     ## Device Reachability situation
 
-    The endpoint `POST /retrieve` allows to get current reachability status information synchronously for a device.
+    The endpoint `POST /retrieve-reachability-status` allows to get current connectivity status information synchronously.
 
 
     ## Further info and support
@@ -47,27 +48,27 @@ externalDocs:
   url: https://github.com/camaraproject/
 
 servers:
-  - url: "{apiRoot}/device-reachability-status/v0"
+  - url: "{apiRoot}/reachability-retrieval/v0"
     variables:
       apiRoot:
         default: http://localhost:9091
         description: API root
 tags:
-  - name: Reachability status retrieval
-    description: Retrieve the reachability status of a device
+  - name: Device reachability status
+    description: Operations to get the current reachability status of a device
 paths:
-  /retrieve:
+  /retrieve-reachability-status:
     post:
       tags:
-        - Reachability status retrieval
+        - Device reachability status
       summary: "Get the current reachability status information"
-      description: Get the current reachability status information for a device.
+      description: Get the current reachability status information
       operationId: getReachabilityStatus
       parameters:
         - $ref: '#/components/parameters/x-correlator'
       security:
         - openId:
-            - device-reachability-status:read
+            - reachability-retrieval:read
       requestBody:
         content:
           application/json:
@@ -238,6 +239,8 @@ components:
       properties:
         device:
           $ref: "#/components/schemas/Device"
+      required:
+        - device
 
     ErrorInfo:
       type: object
@@ -287,7 +290,7 @@ components:
       description: |
         Client does not have sufficient permission.
         In addition to regular scenario of `PERMISSION_DENIED`, other scenarios may exist:
-          - Phone number cannot be deducted from access token context.(`{"code": "NUMBER_VERIFICATION.INVALID_TOKEN_CONTEXT","message": "Phone number cannot be deducted from access token context"}`)
+          - Phone number cannot be deducted from access token context.(`{"code": "INVALID_TOKEN_CONTEXT","message": "Phone number cannot be deducted from access token context"}`)
       headers:
         X-Correlator:
           description: Correlation id for the different services
@@ -318,6 +321,11 @@ components:
           schema:
             $ref: "#/components/schemas/ErrorInfo"
           examples:
+            NotFound:
+              value:
+                status: 404
+                code: NOT_FOUND
+                message: "The specified resource is not found"
             DeviceIdentifierNotFound:
               value:
                 status: 404
@@ -361,11 +369,6 @@ components:
                 status: 422
                 code: DEVICE_NOT_APPLICABLE
                 message: Service not applicable to the device
-            NetworkIssueToRetrieveReachabilityStatus:
-              value:
-                status: 422
-                code: DEVICE_REACHABILITY_STATUS.UNABLE_TO_PROVIDE_REACHABILITY_STATUS
-                message: Network issue - Unable to provide reachability status
     Generic500:
       description: Server error
       headers:
