--- a/code/API_definitions/device-network-type-subscription.yaml
+++ b/code/API_definitions/device-network-type-subscription.yaml
@@ -352,6 +352,7 @@ components:
             Camara Event types eligible to be delivered by this subscription.
             Note: As of now we enforce to have only event type per subscription.
           type: array
+          minItems: 1
           maxItems: 1
           items:
             $ref: "#/components/schemas/SubscriptionEventType"
@@ -573,14 +574,14 @@ components:
             Current status of the subscription - Management of Subscription State engine is not mandatory for now. Note not all statuses may be considered to be implemented. Details:
               - `ACTIVATION_REQUESTED`: Subscription creation (POST) is triggered but subscription creation process is not finished yet.
               - `ACTIVE`: Subscription creation process is completed. Subscription is fully operative.
-              - `DEACTIVE`: Subscription is temporarily inactive, but its workflow logic is not deleted.
+              - `INACTIVE`: Subscription is temporarily inactive, but its workflow logic is not deleted.
               - `EXPIRED`: Subscription is ended (no longer active). This status applies when subscription is ended due to `SUBSCRIPTION_EXPIRED` or `ACCESS_TOKEN_EXPIRED` event.
               - `DELETED`: Subscription is ended as deleted (no longer active). This status applies when subscription information is kept (i.e. subscription workflow is no longer active but its meta-information is kept).
           enum:
             - ACTIVATION_REQUESTED
             - ACTIVE
             - EXPIRED
-            - DEACTIVE
+            - INACTIVE
             - DELETED
       discriminator:
         propertyName: protocol
@@ -689,6 +690,7 @@ components:
         - source
         - specversion
         - type
+        - data
         - time
       properties:
         id:
@@ -1147,5 +1149,5 @@ components:
           subscriptionId: 987654321
           device:
             phoneNumber: +123456789
-          ConnectedNetworkType: 5GNSA 
+          connectedNetworkType: 5GNSA 
         time: 2023-03-22T05:40:23.682Z
