feat: add termination reason when subscription deleted

--- a/code/API_definitions/device-reachability-status-subscriptions.yaml
+++ b/code/API_definitions/device-reachability-status-subscriptions.yaml
@@ -36,7 +36,11 @@ info:
 
     Note: Additionally to these list, ``org.camaraproject.reachability-status-subscriptions.v0.subscription-ends`` notification `type` is sent when the subscription ends.
     This notification does not require dedicated subscription.
-    It is used when the subscription expire time (optionally set by the requester) has been reached or if the API server has to stop sending notification prematurely.
+
+    It is used when:
+      - the subscription expire time (optionally by the requester) has been reached
+      - the subscription was deleted by the requester
+      - the API server has to stop sending notification prematurely.
 
     ### Notifications callback
 
@@ -646,9 +650,11 @@ components:
       description: |
         NETWORK_TERMINATED - API server stopped sending notification
         SUBSCRIPTION_EXPIRED - Subscription expire time (optionally set by the requester) has been reached
+        SUBSCRIPTION_DELETED - Subscription was deleted by the requester
       enum:
         - NETWORK_TERMINATED
         - SUBSCRIPTION_EXPIRED
+        - SUBSCRIPTION_DELETED
 
   responses:
     Generic400:
