--- a/code/API_definitions/device-roaming-status-subscriptions.yaml
+++ b/code/API_definitions/device-roaming-status-subscriptions.yaml
@@ -39,7 +39,7 @@ info:
     Note: Additionally to these list, ``org.camaraproject.roaming-status-subscriptions.v0.subscription-ends`` notification `type` is sent when the subscription ends.
     This notification does not require dedicated subscription.
 
-    It is used when:
+    It is used in following cases:
       - the subscription expire time (optionally by the requester) has been reached
       - the subscription was deleted by the requester
       - the API server has to stop sending notification prematurely.
