--- a/code/API_definitions/device-roaming-status-subscriptions.yaml
+++ b/code/API_definitions/device-roaming-status-subscriptions.yaml
@@ -255,6 +255,13 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Subscription"
+              examples:
+                subscription-active:
+                  $ref: "#/components/examples/SUBSCRIPTION_ACTIVE"
+                subscription-activation-requested:
+                  $ref: "#/components/examples/SUBSCRIPTION_ACTIVATION_REQUESTED"
+                subscription-deleted:
+                  $ref: "#/components/examples/SUBSCRIPTION_DELETED"
         "400":
           $ref: "#/components/responses/SubscriptionIdRequired"
         "401":
@@ -1197,3 +1204,57 @@ components:
           terminationReason: SUBSCRIPTION_EXPIRED
           subscriptionId: qs15-h556-rt89-1298
         time: 2023-01-19T13:18:23.682Z
+
+    SUBSCRIPTION_ACTIVE:
+      value:
+        id: 550e8400-e29b-41d4-a716-446655440000
+        sink: https://endpoint.example.com/sink
+        protocol: HTTP
+        types:
+          - "org.camaraproject.roaming-status-subscriptions.v0.roaming-on"
+        config:
+          subscriptionDetail:
+            device:
+              phoneNumber: "+123456789"
+          subscriptionExpireTime: 2024-07-17T13:18:23.682Z
+          subscriptionMaxEvents: 5
+          initialEvent: true
+        startsAt: 2024-07-03T21:12:02.871Z
+        expiresAt: 2024-07-03T21:12:02.871Z
+        status: ACTIVE
+
+    SUBSCRIPTION_ACTIVATION_REQUESTED:
+      value:
+        id: 550e8400-e29b-41d4-a716-446655440000
+        sink: https://endpoint.example.com/sink
+        protocol: HTTP
+        types:
+          - "org.camaraproject.roaming-status-subscriptions.v0.roaming-on"
+        config:
+          subscriptionDetail:
+            device:
+              phoneNumber: "+123456789"
+          subscriptionExpireTime: 2024-07-17T13:18:23.682Z
+          subscriptionMaxEvents: 5
+          initialEvent: true
+        startsAt: 2024-07-03T21:12:02.871Z
+        expiresAt: 2024-07-03T21:12:02.871Z
+        status: ACTIVATION_REQUESTED
+
+    SUBSCRIPTION_DELETED:
+      value:
+        id: 550e8400-e29b-41d4-a716-446655440000
+        sink: https://endpoint.example.com/sink
+        protocol: HTTP
+        types:
+          - "org.camaraproject.roaming-status-subscriptions.v0.roaming-on"
+        config:
+          subscriptionDetail:
+            device:
+              phoneNumber: "+123456789"
+          subscriptionExpireTime: 2024-07-17T13:18:23.682Z
+          subscriptionMaxEvents: 5
+          initialEvent: true
+        startsAt: 2024-07-03T21:12:02.871Z
+        expiresAt: 2024-07-03T21:12:02.871Z
+        status: DELETED
